welcome and custom fonts

--- a/app.json
+++ b/app.json
@@ -22,7 +22,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
-        "bundler": "metro"
-    }
+      "bundler": "metro"
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
