--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
-    "tailwind-rn": "^4.2.0"
+    "tailwind-rn": "^4.2.0",
+    "expo-font": "~12.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
