--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@shopify/flash-list": "1.6.4",
     "expo": "^51.0.38",
+    "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^11.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
@@ -25,9 +28,7 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
-    "tailwind-rn": "^4.2.0",
-    "@shopify/flash-list": "1.6.4",
-    "expo-dev-client": "~4.0.29"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
